--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,10 +1,147 @@
-$themeColor-Light: #f3e2c7;
-$themeColor-Dark:#b68d4c;
+@import "inner";
+@mixin defaultborder($size){
+  border: $size solid red;
+}
 
+* {
+  box-sizing: border-box;
+}
+.my-class{
+  color: red;
+}
 
-body {
-  background-color: $themeColor-Light;
-  h1, h2 {
-    color: $themeColor-Dark
+#form{
+  width: 45%;
+  float:right;
+  border-radius: 4px ;
+  @include defaultborder(2px);
+  display:block;
+  color: red;
+  margin : 10px;
+  padding: 10px;
+  transition: 0.5s;
+  &:hover{
+    box-shadow: 8px 8px gainsboro;
+    transition: 0.5s;
+  }
+  input[type=text] {
+    width: 100%;
+    padding: 12px 4px;
+    margin: 8px 0;
+    display: inline-block;
+    border: none;
+    border-bottom: 2px solid red ;
+
+    &:focus{
+      border-bottom: 4px solid red ;
+      transition: 0.25s;
+
+    }
+  }
+
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    @include defaultborder(1px);
+    border-radius: 4px;
+    resize: none;
+    &:focus{
+      border: 3px solid red ;
+      transition: 0.25s;
+
+    }
+  }
+  button{
+    background-color: dodgerblue;
+    padding: $formPadding;
+    margin:$formMargin  ;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    width:12%;
+    float: right;
+    cursor: pointer;
+  &:hover{
+    background-color: red;
+    transition: 0.5s;
+  }
+  }
+
+  #order{
+    padding: 5px 8px;
+    @include defaultborder(1px);
+    box-shadow: none;
+    border-radius: 2px;
+    background: transparent;
+    -ms-progress-appearance: none;
+    transition: 0.5s;
+    &:hover{
+     @include defaultborder(2px);
+      transition: 0.25s;
+    }
+   option{
+     &:hover{
+       @include defaultborder(10px);
+     }
+   }
+  }
+
+  .addtolist{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    background-color: red;
+    color: white;
+
+    @include defaultborder(2px);
+    border-radius: 4px;
   }
 }
+
+
+
+#test{
+  float: left;
+  width: 50% ;
+  margin : 10px;
+
+  li{
+
+    position: relative;
+    .header{
+      text-align: center;
+    }
+    .list {
+      position: absolute;
+      right: 0;
+      top: 0;
+      padding: 12px 16px 12px 16px;
+      cursor: pointer;
+    }
+
+    display: block;
+    margin: 15px 0px;
+    background-color: cornflowerblue;
+    padding: 20px 30px;
+    color: white;
+    border-radius:  4px;
+    transition: 0.5s;
+    &:hover{
+      background-color: red;
+      box-shadow:10px 10px #adb5bd;
+      transition:  0.5s;
+
+    }
+  }
+  span{
+    font-size: 30px;
+  }
+  hr{
+    background-color: white;
+    color: white;
+  }
+
+
+}
+
